red/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: red
spec:
  type: NodePort
  selector:
    app: red
  ports:
  - port: 80
